Deploy ContDistrApp and test bulkApi

--- a/pom.xml
+++ b/pom.xml
@@ -27,4 +27,17 @@
         <module>query-api-app</module>
         <module>outbox-relay-app</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <inherited>false</inherited>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
